# docs/swagger.json
@@ -174,6 +174,87 @@
                 }
             }
         },
+        "/api/v1/content/list": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a list of contents with pagination and filtering",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contents"
+                ],
+                "summary": "List contents",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Title filter",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description filter",
+                        "name": "description",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Account Address filter",
+                        "name": "account_address",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/res.ContentInfoRes"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/util.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "Msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/content/save": {
             "post": {
                 "description": "Create a new content",
@@ -356,19 +437,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/util.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "Msg": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/res.UserInfoRes"
                         }
                     },
                     "500": {
@@ -398,14 +467,14 @@
             "type": "object",
             "required": [
                 "accountAddress",
-                "body",
+                "description",
                 "title"
             ],
             "properties": {
                 "accountAddress": {
                     "type": "string"
                 },
-                "body": {
+                "description": {
                     "type": "string"
                 },
                 "isPublic": {
@@ -423,18 +492,18 @@
             "type": "object",
             "required": [
                 "accountAddress",
-                "body",
                 "contentId",
+                "description",
                 "title"
             ],
             "properties": {
                 "accountAddress": {
                     "type": "string"
                 },
-                "body": {
+                "contentId": {
                     "type": "string"
                 },
-                "contentId": {
+                "description": {
                     "type": "string"
                 },
                 "isPublic": {
@@ -469,13 +538,13 @@
                 "accountAddress": {
                     "type": "string"
                 },
-                "body": {
-                    "type": "string"
-                },
                 "contentID": {
                     "type": "string"
                 },
                 "created_at": {
+                    "type": "string"
+                },
+                "description": {
                     "type": "string"
                 },
                 "isPublic": {
@@ -486,12 +555,6 @@
                 },
                 "title": {
                     "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "string"
                 }
             }
         },
@@ -499,6 +562,20 @@
             "type": "object",
             "properties": {
                 "nonce": {
+                    "type": "string"
+                }
+            }
+        },
+        "res.UserInfoRes": {
+            "type": "object",
+            "properties": {
+                "accountAddress": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -522,6 +599,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
