# mods/content/api/req/ListContentReq.go
@@ -1,0 +1,9 @@
+package req
+
+type QueryContentReq struct {
+	Title          string `json:"title"`
+	Description    string `json:"description"`
+	AccountAddress string `json:"accountAddress"`
+	Page           int    `json:"page"`
+	Size           int    `json:"size"`
+}
