# mods/user/api/res/UserInfoRes.go
@@ -1,0 +1,7 @@
+package res
+
+type UserInfoRes struct {
+	Username       string `json:"username"`
+	AccountAddress string `json:"accountAddress"`
+	Email          string `json:"email"`
+}
